--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 ul {
   list-style-type: none;
@@ -374,7 +376,7 @@ Stripe Styles
 /* links */
 .submenu {
   background: var(--clr-white);
-  box-shadow: var(--dark-shadow);
+  box-shadow: 0 0 15px -10px #808080b5;
   position: absolute;
   top: 4rem;
   left: 50%;
